# dvc_project

./: dvc.yaml  nohup.out  pyproject.toml
.dvc/: config
data/: .gitignore  df.csv.dvc
pipeline/: configure_dvc.sh
src/: get_df.ipynb  get_df.py
