[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mikhail Lunev <mlsci@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
notebook = "^6.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
